test/e2e/network-policy/00-memcached.yaml
---
apiVersion: memcached.c5c3.io/v1alpha1
kind: Memcached
metadata:
  name: test-netpol
spec:
  replicas: 1
  image: "memcached:1.6"
  resources:
    requests:
      cpu: "50m"
      memory: "64Mi"
    limits:
      cpu: "100m"
      memory: "128Mi"
  memcached:
    maxMemoryMB: 64
    threads: 4
  security:
    networkPolicy:
      enabled: true
