test/e2e/network-policy/02-patch-allowed-sources.yaml
---
apiVersion: memcached.c5c3.io/v1alpha1
kind: Memcached
metadata:
  name: test-netpol
spec:
  security:
    networkPolicy:
      enabled: true
      allowedSources:
        - podSelector:
            matchLabels:
              app: allowed-client
