test/e2e/network-policy/04-cert-manager.yaml
---
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  name: test-netpol-selfsigned
spec:
  selfSigned: {}
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: test-netpol-cert
spec:
  secretName: test-netpol-certs
  issuerRef:
    name: test-netpol-selfsigned
    kind: Issuer
  dnsNames:
    - test-netpol
