test/e2e/network-policy/05-patch-enable-tls-monitoring.yaml
---
apiVersion: memcached.c5c3.io/v1alpha1
kind: Memcached
metadata:
  name: test-netpol
spec:
  security:
    tls:
      enabled: true
      certificateSecretRef:
        name: test-netpol-certs
  monitoring:
    enabled: true
