test/e2e/network-policy/07-patch-disable-networkpolicy.yaml
---
apiVersion: memcached.c5c3.io/v1alpha1
kind: Memcached
metadata:
  name: test-netpol
spec:
  security:
    networkPolicy:
      enabled: false
