test/e2e/network-policy/01-assert-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-netpol
  labels:
    app.kubernetes.io/name: memcached
    app.kubernetes.io/instance: test-netpol
    app.kubernetes.io/managed-by: memcached-operator
