test/e2e/network-policy/04-assert-certificate-ready.yaml
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: test-netpol-cert
status:
  conditions:
    - type: Ready
      status: "True"
