test/e2e/network-policy/08-error-networkpolicy-gone.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-netpol
